Add conditional blocks to phrases